--- a/src/component/HeaderComponent/styles.scss
+++ b/src/component/HeaderComponent/styles.scss
@@ -6,7 +6,23 @@
   position: sticky; 
   top: 0; 
   left: 0;
-
+  .cart-container {
+    position: relative;
+  }
+  
+  .cart-item-count {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    border: 2px solid rgb(90, 89, 89);
+    background-color: #ffffff; 
+    color: #cb1c22; 
+    border-radius: 50%;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  
   .ant-row {
     display: flex;
     align-items: center;
