--- a/src/pages/cart/styles.scss
+++ b/src/pages/cart/styles.scss
@@ -2,13 +2,13 @@ $max-width: 1200px;
 $spacing-small: 10px;
 $spacing-medium: 20px;
 $spacing-large: 30px;
-$primary-color: #6299cf;
-$secondary-color: #417cb0;
+$primary-color: #cb1c22;
+$secondary-color: #db4247;
 $background-color: #f4f7fc;
 $text-color: #333;
 
 .cart-page {
-  padding: 20px 100px;
+  padding: $spacing-medium;
   max-width: $max-width;
   margin: 0 auto;
 
@@ -22,12 +22,14 @@ $text-color: #333;
       font-weight: bold;
     }
   }
+
   .cart-item-card {
-    width: 350px;
-    height: 280px;
+    width: 250px;
+    height: 250px;
+    gap: 5px;
     .cart-item-image {
-      width: 100px;
-      height: 100px;
+      width: 80px;
+      height: 90px;
       border-radius: 8px;
     }
 
@@ -47,14 +49,13 @@ $text-color: #333;
   }
 
   .cart-content {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
     gap: $spacing-medium;
-    justify-items: center;
 
     .cart-items {
-      width: 100%;
-      max-width: 300px;
+      width: 65%;
       min-height: 400px;
       background-color: #fff;
       border: 1px solid #ddd;
@@ -63,8 +64,8 @@ $text-color: #333;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
+      align-items: stretch;
+      gap: $spacing-medium;
       transition: all 0.3s ease;
 
       .product-card {
@@ -73,9 +74,10 @@ $text-color: #333;
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: $spacing-small;
 
         .product-image {
-          max-width: 100%;
+          max-width: 80%;
           max-height: 200px;
           height: auto;
           object-fit: contain;
@@ -103,7 +105,7 @@ $text-color: #333;
     }
 
     .payment-form {
-      width: 250px;
+      width: 32%;
       padding: $spacing-medium;
       background-color: #fff;
       border-radius: 20px;
@@ -131,10 +133,11 @@ $text-color: #333;
 
       .ant-btn {
         border-radius: 4px;
-        background-color: $primary-color;
+        background-color:$primary-color;
         color: white;
         width: 100%;
         padding: 12px 0;
+        transition: background-color 0.3s ease;
 
         &:hover {
           background-color: $secondary-color;
