--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -2,20 +2,18 @@ $max-width: 1200px;
 $spacing-small: 10px;
 $spacing-medium: 20px;
 $spacing-large: 30px;
-$primary-color: #6299cf;
-$secondary-color: #417cb0;
-$background-color: #f4f7fc;
+$primary-color: #cb1c22;
+$secondary-color: #cf2c32;
+$background-color: #ffffff;
 $text-color: #333;
-
 
 .home-page {
   max-width: $max-width;
   margin: 0 auto;
   padding: $spacing-medium;
-  
+
   .Tet-advertising,
-  .product-page,
-  .accessory-page {
+  .category-container {
     max-width: $max-width;
     margin: 110px auto;
   }
@@ -63,13 +61,92 @@ $text-color: #333;
     }
   }
 
+  .category-container {
+    h2 {
+      font-size: 1.5em;
+      color: $text-color;
+    }
+
+    .product-list {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: $spacing-small;
+
+      @media (max-width: 1024px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      @media (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @media (max-width: 480px) {
+        grid-template-columns: 1fr;
+      }
+
+      .product-card {
+        border: 1px solid $primary-color;
+        border-radius: 8px;
+        overflow: hidden;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+
+        &:hover {
+          transform: translateY(-5px);
+        }
+
+        .product-image {
+          width: 100%;
+          height: 200px;
+          object-fit: cover;
+        }
+
+        .product-info {
+          padding: $spacing-small;
+          flex-grow: 1;
+        }
+
+        .product-name {
+          font-size: 1.1em;
+          color: $primary-color;
+        }
+
+        .product-price {
+          font-size: 1em;
+          color: $secondary-color;
+        }
+
+        .product-description {
+          font-size: 0.9em;
+          color: $text-color;
+        }
+
+        .add-to-cart-btn {
+          margin-top: $spacing-small;
+          background-color: $primary-color;
+          border: none;
+          color: #fff;
+          height: 40px;
+          align-self: stretch;
+
+          &:hover {
+            background-color: darken($primary-color, 10%);
+          }
+        }
+      }
+    }
+  }
+
   @media (max-width: 1024px) {
     .home-page {
       padding: $spacing-small;
     }
 
-    .product-page,
-    .accessory-page {
+    .category-container {
       width: 100%;
     }
   }
@@ -79,8 +156,7 @@ $text-color: #333;
       padding: $spacing-small;
     }
 
-    .product-page,
-    .accessory-page {
+    .category-container {
       width: 100%;
     }
 
@@ -94,8 +170,7 @@ $text-color: #333;
       padding: $spacing-small;
     }
 
-    .product-page,
-    .accessory-page {
+    .category-container {
       width: 100%;
     }
   }
