--- a/src/pages/product/styles.scss
+++ b/src/pages/product/styles.scss
@@ -1,385 +1,323 @@
-$max-width: 1200px;
-$spacing-small: 10px;
-$spacing-medium: 20px;
-$spacing-large: 30px;
 $primary-color: #cb1c22;
-$secondary-color: #cb1c22;
-$background-color: #cb1c22;
+$secondary-color: #e8413b;
+$background-color: #f9f9f9;
 $text-color: #333;
+$card-border-radius: 15px;
+$transition-duration: 0.3s;
+$box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+$hover-box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+$max-width-large: 1200px;
+$max-width-medium: 600px;
+$max-width-small: 190px;
+$thumbnail-size: 80px;
 
-.home-page {
-  padding: 20px 100px;
-  max-width: $max-width;
+body {
+  font-family: "Arial", sans-serif;
+  background-color: $background-color;
+  margin: 0;
+  padding: 0;
+}
 
-  .filter-product-container {
+.product-page {
+  max-width: $max-width-large;
+  margin: 0 auto;
+  padding: 20px;
+  color: $text-color;
+
+  h1 {
+    font-size: 2.5rem;
+    color: $primary-color;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .sort-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: $spacing-large;
-    flex-wrap: wrap;
+    margin-bottom: 20px;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: $card-border-radius;
+    box-shadow: $box-shadow;
+    transition: box-shadow $transition-duration;
 
-    .filter-item {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 16px;
-      color: $text-color;
-      padding: $spacing-small;
-      background-color: #f7f7f7;
-      border-radius: 25px;
-      transition: background-color 0.3s ease, transform 0.3s ease;
+    &:hover {
+      box-shadow: $hover-box-shadow;
+    }
+
+    .search-input {
+      flex: 1;
+      margin: 0 10px;
+      padding: 10px;
+      border-radius: $card-border-radius;
+      box-shadow: $box-shadow;
+    }
+
+    .sort-select {
+      width: 150px;
+      .ant-select-selector {
+        border-radius: $card-border-radius;
+        box-shadow: $box-shadow;
+      }
+    }
+
+    .ant-btn {
+      background-color: $primary-color;
+      color: #fff;
+      border-radius: $card-border-radius;
+      padding: 10px 15px;
+      cursor: pointer;
+      transition: background-color $transition-duration;
+    }
+  }
+
+  .filter-options {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: $card-border-radius;
+    box-shadow: $box-shadow;
+    transition: box-shadow $transition-duration;
+
+    .ant-collapse-item {
+      margin-bottom: 15px;
+      border-radius: $card-border-radius;
+      box-shadow: $box-shadow;
+      transition: box-shadow $transition-duration;
+
+      .ant-collapse-header {
+        font-weight: bold;
+        color: $primary-color;
+      }
+
+      .ant-checkbox-group {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+
+        .ant-checkbox-wrapper {
+          margin-right: 15px;
+          font-size: 1rem;
+          color: $text-color;
+        }
+      }
+
+      .ant-btn {
+        background-color: $primary-color;
+        color: #fff;
+        border-radius: $card-border-radius;
+        padding: 10px 15px;
+        margin:  5px;
+        cursor: pointer;
+        transition: background-color $transition-duration;
+      }
+    }
+  }
+
+  .collapse {
+    margin-top: 20px;
+
+    .ant-collapse-item {
+      border-radius: $card-border-radius;
+      box-shadow: $box-shadow;
+      transition: box-shadow $transition-duration;
 
       &:hover {
-        background-color: #e2e2e2;
-        transform: scale(1.05);
+        box-shadow: $hover-box-shadow;
       }
 
-      .filter-label {
-        margin-right: $spacing-small;
-        font-weight: 600;
+      .ant-collapse-header {
+        font-weight: bold;
+        color: $primary-color;
       }
 
-      .filter-input {
-        padding: $spacing-small;
-        border-radius: 8px;
-        border: 1px solid #ddd;
-        font-size: 14px;
-        color: $text-color;
-        width: 3350px;
-        transition: border-color 0.3s ease;
+      .ant-checkbox-group {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
 
-        &:focus {
-          outline: none;
-          border-color: $primary-color;
+        .ant-checkbox-wrapper {
+          margin-right: 15px;
+          font-size: 1rem;
+          color: $text-color;
         }
       }
     }
   }
+}
 
-  .title {
-    font-size: 28px;
-    font-weight: 700;
-    margin-bottom: 30px;
-    color: #333;
-    letter-spacing: 1px;
-    max-width: 1200px;
-    margin: 0 auto;
+button {
+  background-color: $primary-color;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px 0px;
+  border-radius: $card-border-radius;
+  cursor: pointer;
+  transition: background-color $transition-duration;
+
+  &:hover {
+    background-color: $secondary-color;
   }
+}
 
-  .menu-container {
-    margin-bottom: 30px;
-  }
+.product-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  text-align: center;
 
-  .search-container {
-    margin-bottom: 30px;
+  .product-card {
+    border: 1px solid $primary-color;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 
-    .search-input {
-      width: 100%;
-      max-width: 400px;
-      padding: $spacing-small;
-      border-radius: 4px;
-      border: 1px solid #ddd;
-      font-size: 16px;
-      color: $text-color;
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: $hover-box-shadow;
+    }
 
-      &:focus {
-        outline: none;
-        border-color: $primary-color;
+    .product-image {
+      padding: 15%;
+      width: 80%;
+      max-width: $max-width-small;
+      height: 100px;
+      object-fit: cover;
+      border-bottom: 1px solid $background-color;
+    }
+
+    .product-info {
+      padding: 15px;
+      flex-grow: 1;
+
+      .product-name {
+        font-size: 1.2rem;
+        color: $text-color;
+        margin-bottom: 10px;
+        text-align: center;
+      }
+
+      .product-price {
+        font-size: 1.1rem;
+        font-weight: bold;
+        color: $primary-color;
+        margin-bottom: 10px;
+      }
+
+      .product-description {
+        font-size: 0.9rem;
+        color: darken($text-color, 20%);
+        text-align: justify;
       }
     }
+
+    .add-to-cart-btn {
+      background-color: $secondary-color;
+      color: #fff;
+      margin: 10px;
+      border-radius: $card-border-radius;
+      transition: background-color $transition-duration;
+
+      &:hover {
+        background-color: lighten($secondary-color, 10%);
+      }
+    }
+  }
+}
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: $primary-color;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  box-shadow: $box-shadow;
+  cursor: pointer;
+  transition: background-color $transition-duration;
+
+  &:hover {
+    background-color: $secondary-color;
+  }
+
+  &:active {
+    transform: scale(0.95);
+  }
+}
+
+@media (max-width: 1024px) {
+  .product-page {
+    padding: 15px;
   }
 
   .product-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
 
   .product-card {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
-    max-width: 300px;
+    flex-direction: column;
+    align-items: center;
 
-    &:hover {
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-      transform: translateY(-5px);
+    .product-image {
+      max-width: $max-width-medium;
     }
+  }
+}
 
-    .product-link {
-      display: block;
-      color: inherit;
-      text-decoration: none;
+@media (max-width: 768px) {
+  .product-page {
+    padding: 10px;
+  }
 
-      .product-image {
-        width: 70%;
-        max-width: 300px;
-        height: auto;
-        border-radius: 8px;
-        transition: transform 0.3s ease, filter 0.3s ease;
+  .product-list {
+    grid-template-columns: 1fr;
+  }
 
-        &:hover {
-          transform: scale(1.05);
-        }
+  .product-card {
+    .product-info {
+      .product-name {
+        font-size: 1rem;
       }
 
-      .product-info {
-        margin-top: 5px;
-
-        .product-name {
-          font-size: 18px;
-          font-weight: 600;
-          margin: 10px 0;
-          transition: color 0.3s ease;
-
-          &:hover {
-            color: #e91e63;
-          }
-        }
-
-        .product-price {
-          font-size: 16px;
-          font-weight: 600;
-          color: #e91e63;
-        }
-
-        .product-description {
-          font-size: 14px;
-          color: #666;
-        }
-
-        .product-attribute {
-          font-size: 14px;
-          color: #999;
-        }
+      .product-price {
+        font-size: 0.9rem;
       }
-    }
 
-    .btn-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 15px;
-
-      .add-to-cart {
-        background-color: #cb1c22;
-        border-color: #c9c9c9;
-        color: #fff;
-        padding: 10px 20px;
-        border-radius: 30px;
-        font-weight: 600;
-        transition: background-color 0.3s, transform 0.3s ease,
-          box-shadow 0.3s ease;
-
-        &:hover {
-          background-color: #b4363a;
-          border-color: #567f9f;
-          transform: scale(1.05);
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        &.animate {
-          animation: buttonAnimation 0.5s ease-out;
-        }
+      .product-description {
+        font-size: 0.8rem;
       }
     }
   }
+}
 
-  .show-more-button {
-    margin-top: 20px;
-    background-color: #cb1c22;
-    border-color: #8b8888;
-    color: #fff;
-    max-width: 300px;
-    font-size: 16px;
-    border-radius: 30px;
-    text-align: center;
-    transition: background-color 0.3s, transform 0.3s ease;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+@media (max-width: 480px) {
+  .product-page {
+    padding: 5px;
+  }
 
-    &:hover {
-      background-color: #ffffff;
-      border-color: #000000;
-      transform: scale(1.05);
-    }
+  h1 {
+    font-size: 1.5rem;
+  }
 
-    &:focus {
-      outline: 2px solid #e91e63;
-    }
+  button {
+    padding: 8px 16px;
+    font-size: 0.9rem;
   }
 
   .scroll-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #2b2828;
-    color: #ffffff;
-    padding: 10px;
-    border-radius: 50%;
-    font-size: 20px;
-    cursor: pointer;
-    transition: background-color 0.3s, transform 0.3s ease;
-
-    &:hover {
-      background-color: #cb1c22;
-      transform: translateY(-5px);
-    }
-  }
-
-  .cart-notification {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #ecf0ed;
-    color: #000000;
-    padding: 15px;
-    border-radius: 4px;
-    text-align: center;
-    z-index: 1000;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    animation: slideUp 0.5s ease-out;
-  }
-
-  @keyframes slideUp {
-    0% {
-      opacity: 0;
-      transform: translateY(50px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-
-  @keyframes buttonAnimation {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.1);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-
-  @media (max-width: 1024px) {
-    .home-page {
-      padding: 20px;
-    }
-
-    .product-list {
-      grid-template-columns: 1fr;
-    }
-
-    .product-card {
-      padding: 15px;
-      max-width: 100%;
-    }
-
-    .btn-container {
-      flex-direction: column;
-      gap: 10px;
-
-      .order-button,
-      .add-to-cart {
-        width: 100%;
-      }
-    }
-
-    .show-more-button {
-      font-size: 14px;
-    }
-
-    .product-name {
-      font-size: 16px;
-    }
-
-    .product-price {
-      font-size: 14px;
-    }
-  }
-
-  @media (max-width: 768px) {
-    .home-page {
-      padding: 20px;
-    }
-
-    .product-list {
-      grid-template-columns: 1fr;
-    }
-
-    .product-card {
-      padding: 15px;
-      max-width: 100%;
-    }
-
-    .btn-container {
-      flex-direction: column;
-      gap: 10px;
-
-      .order-button,
-      .add-to-cart {
-        width: 100%;
-      }
-    }
-
-    .show-more-button {
-      font-size: 14px;
-    }
-
-    .product-name {
-      font-size: 16px;
-    }
-
-    .product-price {
-      font-size: 14px;
-    }
-  }
-
-  @media (max-width: 480px) {
-    .home-page {
-      padding: 10px;
-    }
-
-    .product-list {
-      grid-template-columns: 1fr;
-    }
-
-    .product-card {
-      padding: 10px;
-      max-width: 100%;
-    }
-
-    .btn-container {
-      flex-direction: column;
-      gap: 10px;
-
-      .order-button,
-      .add-to-cart {
-        width: 100%;
-      }
-    }
-
-    .show-more-button {
-      font-size: 12px;
-    }
-
-    .product-name {
-      font-size: 14px;
-    }
-
-    .product-price {
-      font-size: 12px;
-    }
+    width: 40px;
+    height: 40px;
   }
 }
