--- a/src/component/HeaderComponent/styles.scss
+++ b/src/component/HeaderComponent/styles.scss
@@ -1,33 +1,42 @@
+$max-width: 1130px;
+$spacing-small: 10px;
+$spacing-medium: 20px;
+$primary-color: #cb1c22;
+$secondary-color: #cf2c32;
+$background-color: #ffffff;
+$text-color: #333;
+
 .header-component {
-  background-color: #cb1c22;
+  background-color: $primary-color;
   padding: 20px 30px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  position: sticky; 
-  top: 0; 
+  position: sticky;
+  top: 0;
   left: 0;
+
   .cart-container {
     position: relative;
   }
-  
+
   .cart-item-count {
     position: absolute;
     top: -10px;
     right: -10px;
     border: 2px solid rgb(90, 89, 89);
-    background-color: #ffffff; 
-    color: #cb1c22; 
+    background-color: #ffffff;
+    color: $primary-color;
     border-radius: 50%;
     padding: 5px 10px;
     font-size: 14px;
     font-weight: bold;
   }
-  
+
   .ant-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1200px;
+    max-width: $max-width;
     margin: 0 auto;
     width: 100%;
   }
@@ -73,51 +82,50 @@
         opacity: 1;
       }
     }
-    
   }
+
   @keyframes red-envelope {
     0% { transform: translateX(0); }
     100% { transform: translateX(50px); }
   }
-  
+
   .red-envelope {
     position: absolute;
     font-size: 30px;
     color: red;
     animation: red-envelope 2s infinite alternate;
   }
+
   @keyframes bounce {
     0% { transform: translateY(0); }
     50% { transform: translateY(-25px); }
     100% { transform: translateY(0); }
   }
-  
+
   .bouncing-gold {
     position: absolute;
     font-size: 20px;
     color: #ffcc00;
     animation: bounce 1s ease-in-out infinite;
   }
-  
+
   .logo {
     font-size: 28px;
     font-weight: 700;
     color: #ffffff;
     padding-left: 20px;
     text-transform: uppercase;
-    
 
     a {
       text-decoration: none;
       color: inherit;
     }
   }
-  
 
   .login-button {
     background-color: #fff;
     color: rgb(116, 113, 113);
-    border: 2px solid #cb1c22;
+    border: 2px solid $primary-color;
     padding: 10px 20px;
     font-size: 18px;
     font-weight: 600;
@@ -128,7 +136,7 @@
     justify-content: center;
 
     &:hover {
-      background-color: #cb1c22;
+      background-color: $primary-color;
       color: #fff;
       transform: scale(1.1);
     }
@@ -149,7 +157,7 @@
     .cart-button {
       background-color: #fff;
       color: #000;
-      border: 2px solid #cb1c22;
+      border: 2px solid $primary-color;
       display: flex;
       align-items: center;
       padding: 10px 20px;
@@ -179,7 +187,7 @@
       transition: border-color 0.3s;
 
       &:focus {
-        border-color: #cb1c22;
+        border-color: $primary-color;
       }
 
       .ant-input-prefix {
